[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/TrackSwitch.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Track.tscn" type="PackedScene" id=2]
[ext_resource path="res://Demo/Assets/arrow.png" type="Texture2D" id=3]
[ext_resource path="res://Demo/Assets/switch_right.png" type="Texture2D" id=4]
[ext_resource path="res://Demo/Assets/switch_left.png" type="Texture2D" id=5]

[sub_resource type="Curve2D" id=3]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array( 0, 0, 0, 0, 0, 0, -24.0172, 16.0049, 24.0172, -16.0049, 64, -16, 0, 0, 0, 0, 128, -32 )
}

[sub_resource type="ArrayMesh" id=7]
surfaces/0 = {
"aabb": AABB( -1.5, -12.5, 0, 3.00001, 25, 0 ),
"array_data": PackedByteArray( 0, 0, 192, 63, 0, 0, 72, 65, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 192, 191, 0, 0, 72, 65, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 192, 191, 0, 0, 72, 193, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 72, 193, 0, 0, 128, 63, 0, 0, 0, 0 ),
"array_index_data": PackedByteArray( 3, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0 ),
"blend_shape_data": [  ],
"format": 262417,
"index_count": 6,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 4
}

[sub_resource type="MultiMesh" id=8]
resource_local_to_scene = true
instance_count = 13
mesh = SubResource( 7 )
transform_2d_array = PackedVector2Array( 0.997862, -0.0653509, 0.0653509, 0.997862, 4.99457, -0.158784, 0.99271, -0.120526, 0.120526, 0.99271, 14.9612, -0.951593, 0.983963, -0.178375, 0.178375, 0.983963, 24.8715, -2.29786, 0.96941, -0.245445, 0.245445, 0.96941, 34.6664, -4.23916, 0.944773, -0.327724, 0.327724, 0.944773, 44.3102, -6.88866, 0.901815, -0.432122, 0.432122, 0.901815, 53.6689, -10.4116, 0.844883, -0.534951, 0.534951, 0.844883, 62.5187, -15.0453, 0.90983, -0.41498, 0.41498, 0.90983, 71.1414, -20.0982, 0.949275, -0.314447, 0.314447, 0.949275, 80.3453, -23.9782, 0.972032, -0.23485, 0.23485, 0.972032, 89.8998, -26.9119, 0.985534, -0.169477, 0.169477, 0.985534, 99.6491, -29.0879, 0.993644, -0.112567, 0.112567, 0.993644, 109.516, -30.6351, 0.998391, -0.0566985, 0.0566985, 0.998391, 119.466, -31.6243 )

[sub_resource type="Curve2D" id=4]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array( 0, 0, 0, 0, 0, 0, -23.902, -16.0644, 23.902, 16.0644, 64, 16, 0, 0, 0, 0, 128, 32 )
}

[sub_resource type="MultiMesh" id=9]
resource_local_to_scene = true
instance_count = 13
mesh = SubResource( 7 )
transform_2d_array = PackedVector2Array( 0.997947, 0.0640496, -0.0640496, 0.997947, 4.99855, 0.151877, 0.992838, 0.119466, -0.119466, 0.992838, 14.9734, 0.932876, 0.984107, 0.177575, -0.177575, 0.984107, 24.87, 2.26685, 0.96946, 0.245249, -0.245249, 0.96946, 34.6843, 4.20508, 0.944619, 0.32817, -0.32817, 0.944619, 44.3251, 6.85303, 0.901062, 0.433689, -0.433689, 0.901062, 53.6716, 10.3796, 0.842941, 0.538006, -0.538006, 0.842941, 62.5197, 15.0383, 0.909125, 0.416523, -0.416523, 0.909125, 71.1225, 20.1158, 0.949179, 0.314736, -0.314736, 0.949179, 80.3335, 24.0132, 0.972129, 0.234445, -0.234445, 0.972129, 89.8904, 26.9492, 0.985697, 0.168525, -0.168525, 0.985697, 99.6571, 29.1232, 0.993793, 0.111241, -0.111241, 0.993793, 109.543, 30.6626, 0.998477, 0.0551718, -0.0551718, 0.998477, 119.494, 31.6382 )

[sub_resource type="Theme" id=10]
CheckButton/icons/off = ExtResource( 5 )
CheckButton/icons/on = ExtResource( 4 )
CheckButton/styles/normal = null

[node name="TrackSwitch" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftTrack" parent="." instance=ExtResource( 2 )]
curve = SubResource( 3 )

[node name="MultiMeshInstance2D" parent="LeftTrack" index="1"]
multimesh = SubResource( 8 )

[node name="HeadPoint" parent="LeftTrack" index="2"]
rotation = -0.0290338

[node name="TrackJunction" parent="LeftTrack/HeadPoint" index="0"]
parent = NodePath("../../..")

[node name="TailPoint" parent="LeftTrack" index="3"]
position = Vector2( 128, -32 )
rotation = -0.0279697
offset = 133.542

[node name="TrackJunction" parent="LeftTrack/TailPoint" index="0"]
parent = NodePath("../../..")
side = "left"

[node name="Line2D" parent="LeftTrack" index="4"]
points = PackedVector2Array( 0, 0, 4.99457, -0.158784, 9.98629, -0.485696, 14.9612, -0.951593, 19.9214, -1.55381, 24.8715, -2.29786, 29.7844, -3.18848, 34.6664, -4.23916, 39.5133, -5.46634, 44.3102, -6.88866, 49.0397, -8.52925, 53.6689, -10.4116, 58.1781, -12.5723, 62.5187, -15.0453, 66.7443, -17.7208, 71.1414, -20.0982, 75.6885, -22.1722, 80.3453, -23.9782, 85.0849, -25.5482, 89.8998, -26.9119, 94.755, -28.0849, 99.6491, -29.0879, 104.571, -29.9343, 109.516, -30.6351, 114.482, -31.1977, 119.466, -31.6243, 124.459, -31.9079, 128, -32 )

[node name="Pointer" type="PathFollow2D" parent="LeftTrack"]
visible = false
position = Vector2( 64.0158, -15.9894 )
rotation = -0.557619
z_index = 2
offset = 66.7697

[node name="Sprite2D" type="Sprite2D" parent="LeftTrack/Pointer"]
texture = ExtResource( 3 )

[node name="RightTrack" parent="." instance=ExtResource( 2 )]
z_index = 1
curve = SubResource( 4 )

[node name="MultiMeshInstance2D" parent="RightTrack" index="1"]
multimesh = SubResource( 9 )

[node name="HeadPoint" parent="RightTrack" index="2"]
rotation = 0.0276211

[node name="TrackJunction" parent="RightTrack/HeadPoint" index="0"]
parent = NodePath("../../..")
enabled = false

[node name="TailPoint" parent="RightTrack" index="3"]
position = Vector2( 128, 32 )
rotation = 0.0265524
offset = 133.514

[node name="TrackJunction" parent="RightTrack/TailPoint" index="0"]
parent = NodePath("../../..")
side = "right"

[node name="Line2D" parent="RightTrack" index="4"]
points = PackedVector2Array( 0, 0, 4.99855, 0.151877, 9.99228, 0.472381, 14.9734, 0.932876, 19.9316, 1.52949, 24.87, 2.26685, 29.793, 3.15517, 34.6843, 4.20508, 39.539, 5.43321, 44.3251, 6.85303, 49.0416, 8.49161, 53.6716, 10.3796, 58.1779, 12.5485, 62.5197, 15.0383, 66.7323, 17.727, 71.1225, 20.1158, 75.6752, 22.2017, 80.3335, 24.0132, 85.0857, 25.589, 89.8904, 26.9492, 94.7538, 28.1221, 99.6571, 29.1232, 104.589, 29.9664, 109.543, 30.6626, 114.517, 31.2194, 119.494, 31.6382, 124.487, 31.914, 128, 32 )

[node name="Pointer" type="PathFollow2D" parent="RightTrack"]
position = Vector2( 64.0026, 15.9805 )
rotation = 0.561357
z_index = 2
offset = 66.7572

[node name="Sprite2D" type="Sprite2D" parent="RightTrack/Pointer"]
texture = ExtResource( 3 )

[node name="Button" type="CheckButton" parent="."]
offset_left = -32.0
offset_top = -72.0
offset_right = 44.0
offset_bottom = -24.0
rotation = 90.0
pivot_offset = Vector2( 38, 24 )
theme = SubResource( 10 )
shortcut_in_tooltip = false
pressed = true
keep_pressed_outside = true

[connection signal="wheel_at_head" from="LeftTrack" to="." method="_on_LeftTrack_wheel_at_head"]
[connection signal="wheel_at_tail" from="LeftTrack" to="." method="_on_LeftTrack_wheel_at_tail"]
[connection signal="wheel_at_head" from="RightTrack" to="." method="_on_RightTrack_wheel_at_head"]
[connection signal="wheel_at_tail" from="RightTrack" to="." method="_on_RightTrack_wheel_at_tail"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="LeftTrack"]
[editable path="RightTrack"]
